# DIME

./: README.md  create_syn.py  preprocess.py  pyproject.toml  run_example.py  utils_train.py
dataset/synthetic/: info.json
models/: loss.py  model.py
src/: data.py
