# pyproject.toml

[project]
name = "DIME"
version = "0.1.0"
description = "dime"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "torch",
    "torchvision",
    "tqdm",
    "ipykernel",
    "pytorch-lightning",
    "torch-optimizer",
    "joblib",
    "kaggle",
    "colorama",
    "grpcio",
    "icecream",
    "xlrd",
    "tomli-w",
    "zero",
    "category_encoders",
    "imbalanced-learn",
    "transformers",
    "datasets",
    "peft==0.9.0",
    "ml_collections",
    "sdmetrics==0.11.1",
    "prdc",
    "rdt",
    "openpyxl",
    "xgboost",
    "timm",
    "tomli"
]

# [project.optional-dependencies]
# dev = [
#     "pytest",
#     "ruff",
# ]